small fix for the title/header area background being too large

--- a/style.css
+++ b/style.css
@@ -40,8 +40,9 @@ background-color: #2a3744;
     display: flex;
     align-items: center;
     margin-left: 100px;
+    max-height: 340px;
 }
-.signuparea {
+.titlearea {
     display: flex;
     align-items: center;
     justify-content: center;
